--- a/jsons/translations/Simplified_Chinese.properties
+++ b/jsons/translations/Simplified_Chinese.properties
@@ -289,7 +289,6 @@ Mounted = 骑兵
 
 # Terrain
 Spring = 天然水泉
-Toxic Waste = 化学污染物
 Army Depot = 军需品仓库
 Hydroelectric Dam = 大水坝
 Isolated Island = 离岛城塞
@@ -299,15 +298,23 @@ Research Facility = 废弃研究所
 Seed Vault = 种子保险库
 Ship Graveyard = 废船墓园
 Soft Drinks Factory = 碳酸饮料工厂
-Grassland = 荒原
-Plains = 浑土
-Snow = 雪漠
+Grassland = 草原
+Wasteland = 废土
+Plains = 平原
+Badlands = 荒地
+Snow = 雪原
+Permafrost = 冻土
 Provides a one-time Production bonus to the closest city when cut down = 清理后为最近城市提供一次性产能
-Forest = 瓦砾
-Jungle = 废墟
-Atoll = 沉没城市
+Forest = 森林
+Jungle = 丛林
+Ruins = 废墟
+Atoll = 环礁
 Sunken Ruins = 沉没城市
-Swamp = 沼泽
+Oasis = 绿洲
+Marsh = 沼泽
+Flood plains = 冲积平原
+Swamp = 湿地
+Toxic Waste = 毒沼
 Vault of Records = 纪录保险库
 Great Barrier Reef = 废船墓园
 Old Faithful = 军需品仓库
